add js atructure

--- a/index.html
+++ b/index.html
@@ -11,30 +11,11 @@
       href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Open+Sans:wght@700&family=Rubik:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="css/index.css" />
     <script type="module" src="js/main.js"></script>
   </head>
 
   <body>
-    <header class="header">
-      <div class="container">
-        <div class="header__wrapper">
-          <img class="logo" src="./images/logo.svg" alt="logo" />
-          <nav class="nav">
-            <a class="nav__link" href="#!">About</a>
-            <a class="nav__link" href="#!">Features</a>
-            <a class="nav__link" href="#!">Pricing</a>
-            <a class="nav__link" href="#!">Testimonials</a>
-            <a class="nav__link" href="#!">Help</a>
-          </nav>
-        </div>
-        <div class="autorization">
-          <button class="autorization__btn">Sign In</button>
-          <button class="autorization__btn autorization__btn_sign_up">
-            Sign Up
-          </button>
-        </div>
-      </div>
-    </header>
+    <div id="root"></div>
   </body>
 </html>
