add animation for section svg

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <a href="#!" class="hero__link">Get Started</a>
           </div>
           <div class="hero__image">
-            <img src="./images/hero.svg" alt="hero">
+            <img src="./images/hero_animated.svg" alt="hero">
           </div>
         </div>
       </section>
@@ -118,7 +118,7 @@
       <section class="features">
         <div class="features__wrapper container">
           <div class="features__img">
-            <img src="./images/features.svg" alt="features">
+            <img src="./images/features_animated.svg" alt="features">
           </div>
           <div class="features__info">
             <h2 class="features__title">We Provide Many Features You Can Use</h2>
@@ -145,7 +145,7 @@
           <div class="price__cards">
             <div class="price__card">
               <div class="price__card-top">
-                <img class="price__card-img" src="./images/box.svg" alt="box">
+                <img class="price__card-img" src="./images/box_animated.svg" alt="box">
                 <h3 class="price__card-title">Free Plan</h3>
                 <ul class="price__card-list">
                   <li class="price__card-list-item">Unlimited Bandwitch</li>
@@ -161,7 +161,7 @@
             </div>
             <div class="price__card">
               <div class="price__card-top">
-                <img class="price__card-img" src="./images/box.svg" alt="box">
+                <img class="price__card-img" src="./images/box_animated.svg" alt="box">
                 <h3 class="price__card-title">Standard Plan</h3>
                 <ul class="price__card-list">
                   <li class="price__card-list-item">Unlimited Bandwitch</li>
@@ -178,7 +178,7 @@
             </div>
             <div class="price__card">
               <div class="price__card-top">
-                <img class="price__card-img" src="./images/box.svg" alt="box">
+                <img class="price__card-img" src="./images/box_animated.svg" alt="box">
                 <h3 class="price__card-title">Premium Plan</h3>
                 <ul class="price__card-list">
                   <li class="price__card-list-item">Unlimited Bandwitch</li>
@@ -205,7 +205,7 @@
           <p class="network__desc">
             See LaslesVPN everywhere to make it easier for you when you move locations.
           </p>
-          <img class="network__map" src="./images/map.svg" alt="map">
+          <img class="network__map" src="./images/map_animated.svg" alt="map">
           <div class="network__sponsors">
             <img class="network__sponsors-img" src="./images/sponsors/reddit.svg" alt="">
             <img class="network__sponsors-img" src="./images/sponsors/reddit.svg" alt="">
