add css for stat and features sections

--- a/index.html
+++ b/index.html
@@ -85,27 +85,21 @@
       <section class="stat">
         <div class="stat__wrapper container">
           <div class="stat__item">
-            <div class="stat__item-icon">
-              <img src="./images/icons/user.svg" alt="user">
-            </div>
+            <div class="stat__item-icon stat__item-icon_user"></div>
             <div class="stat__item-info">
               <div class="stat__num">90+</div>
               <div class="stat__name">Users</div>
             </div>
           </div>
           <div class="stat__item">
-            <div class="stat__item-icon">
-              <img src="./images/icons/loc.svg" alt="location">
-            </div>
+            <div class="stat__item-icon stat__item-icon_loc"></div>
             <div class="stat__item-info">
               <div class="stat__num">30+</div>
               <div class="stat__name">Locations</div>
             </div>
           </div>
           <div class="stat__item">
-            <div class="stat__item-icon">
-              <img src="./images/icons/server.svg" alt="servers">
-            </div>
+            <div class="stat__item-icon stat__item-icon_servers"></div>
             <div class="stat__item-info">
               <div class="stat__num">50+</div>
               <div class="stat__name">Servers</div>
