--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 
       <section class="price">
         <div class="container">
-          <h2 class="price__title"></h2>
+          <h2 class="price__title">Choose Your Plan</h2>
           <p class="price__desc">
             Let's choose the package that is best for you and explore it happily and cheerfully.
           </p>
